# MCF-SSP

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  mcf_ssp.hxx
instances/: README
instances/gte/: gte_bad.1160  gte_bad.15100  gte_bad.15710  gte_bad.160  gte_bad.1700  gte_bad.20  gte_bad.200  gte_bad.298300  gte_bad.35620  gte_bad.451760  gte_bad.460  gte_bad.469010  gte_bad.49320  gte_bad.508829  gte_bad.510  gte_bad.60  gte_bad.60090  gte_bad.6410  gte_bad.65330  readme
test/: CMakeLists.txt  arc_layout.cpp  assignment_problem.cpp  dynamic_problem.cpp  gte.cpp  instances.h.in  netgen.cpp  test.h  test_problem.cpp
